@@ -131,6 +131,7 @@ All (GUI):
 - Added an easier to use wxMenu::AppendSubMenu()
 - wxString <-> wxColour conversions in wxColour class (Francesco Montorsi).
 - Fixed bug with ignoring blank lines in multiline wxGrid cell labels
+- Added wxTextAttr::Merge() (Marcin Simonides)
 
 wxMSW:
 
